--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1248,9 +1248,9 @@ select{
 	margin-right: auto;
 }
 
-.my-20{
-	margin-top: 5rem;
-	margin-bottom: 5rem;
+.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
 }
 
 .my-4{
@@ -1353,6 +1353,18 @@ select{
 
 .mb-4{
 	margin-bottom: 1rem;
+}
+
+.mr-4{
+	margin-right: 1rem;
+}
+
+.mt-12{
+	margin-top: 3rem;
+}
+
+.mb-10{
+	margin-bottom: 2.5rem;
 }
 
 .mt-14{
@@ -1653,6 +1665,18 @@ select{
 	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1rem * var(--tw-space-x-reverse));
+	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .overflow-hidden{
 	overflow: hidden;
 }
@@ -1845,6 +1869,11 @@ select{
 .bg-secondary{
 	--tw-bg-opacity: 1;
 	background-color: rgba(95, 79, 67, var(--tw-bg-opacity));
+}
+
+.bg-yellow-400{
+	--tw-bg-opacity: 1;
+	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
 
 .bg-primary{
@@ -2217,6 +2246,11 @@ select{
 	color: rgba(146, 60, 31, var(--tw-text-opacity));
 }
 
+.text-offer{
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+
 .text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -2234,6 +2268,10 @@ select{
 
 .underline{
 	text-decoration: underline;
+}
+
+.line-through{
+	text-decoration: line-through;
 }
 
 .antialiased{
@@ -2389,6 +2427,11 @@ select{
 }
 
 /* SOCIAL BAR */
+
+.swiper {
+    width: 100%;
+    height: auto;
+  }
 
 .hover\:border-gray-300:hover{
 	--tw-border-opacity: 1;
@@ -2857,10 +2900,6 @@ select{
 		display: grid;
 	}
 
-	.md\:h-600{
-		height: 37.5rem;
-	}
-
 	.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
@@ -2869,8 +2908,16 @@ select{
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.md\:flex-row{
+		flex-direction: row;
+	}
+
 	.md\:gap-6{
 		gap: 1.5rem;
+	}
+
+	.md\:rounded-lg{
+		border-radius: 0.5rem;
 	}
 
 	.md\:border-t-0{
