Configuramos los links para hacer smooth scroll y les quitamos el active

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1896,11 +1896,6 @@ select{
 	background-color: rgba(146, 60, 31, var(--tw-bg-opacity));
 }
 
-.bg-bg{
-	--tw-bg-opacity: 1;
-	background-color: rgba(228, 198, 176, var(--tw-bg-opacity));
-}
-
 .bg-opacity-25{
 	--tw-bg-opacity: 0.25;
 }
@@ -2455,6 +2450,10 @@ select{
 }
 
 /* SOCIAL BAR */
+
+html {
+    scroll-behavior: smooth;
+  }
 
 .owl-theme .owl-dots .owl-dot.active span{
     background-color: #923C1F !important;
