--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,26 @@
 html {
     scroll-behavior: smooth;
   }
+
+  body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #923C1F;
+}
   
 .owl-theme .owl-dots .owl-dot.active span{
     background-color: #923C1F !important;
