--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,3 +32,54 @@ body::-webkit-scrollbar-thumb
 .owl-theme .owl-dots .owl-dot.active span{
     background-color: #923C1F !important;
 }
+
+.marcas>.owl-stage-outer{
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.owl-item{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.owl-prev, .owl-next{
+	position: absolute;
+	font-size: 30px !important;
+	color: #923C1F !important;
+}
+
+.owl-prev{
+	left: 20px;
+	top: 120px;
+}
+
+.owl-next{
+	right: 20px;
+	top: 120px;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+.float:hover {
+	text-decoration: none;
+	color: #25d366;
+  background-color:#fff;
+}
+
+.my-float{
+	margin-top:16px;
+}
